# ai-safety-camp-2024-model-agents

./: .gitignore  README.md  automated_setup.sh  common mistakes.md  common_mistakes.md  find_red_key_seed.py  generate_viable_seeds.py  heist.model.pb  heist_model_final_easy.pt  model_final.pt:Zone.Identifier  pyproject.toml  remote_setup.sh  requirements.txt  setup.py  zero_ablation_experiment.py
notebooks/: RL_ACDC.ipynb  activation_steering.ipynb  activation_steering.py  activation_steering_experiments.ipynb  activation_steering_read.py  activation_steering_visualisations.py  channel_rlacdc.ipynb  convolutional_and_linear_probes.ipynb  explore_heist.ipynb  heist.ipynb  heist.py  heist_data_generation.ipynb  heist_difference_activations.ipynb  heist_difference_activations_plot.ipynb  heist_lin_probing.ipynb  heist_model_activation_insights.ipynb  heist_training.ipynb  helpers.py  linear_probe_exploration.ipynb  maze_linear_probe.ipynb  maze_linear_probe_ben_changes.ipynb  patching_ablations.ipynb  plotting.py  procgen_test.ipynb  selective_ablations.ipynb  simple_linear_probes.ipynb  steering_experiments.py  steering_tests.ipynb  steering_tests_interpretable.ipynb  steering_vector_analysis.ipynb  test_heist.ipynb  visualize_activations.ipynb
paul_notebooks/: heist.py  heist_lin_probing.ipynb  helpers.py  patch_vizualize.ipynb  pheist.py  phelpers.py  visualize_activations.ipynb  visualize_model_performance.ipynb  vizualize_activations.ipynb
src/: analyze_activations.py  base_model_intervention.py  bias_corrected_mazes.py  channel_ablatation_experiments.py  channel_ablation_sweep.py  channel_ablation_sweep_bias_corrected.py  color_decorrelation.py  compute_entity_activation_spans.py  policies.py  (+51 more)
(+50 files in other folders)
