[tool.poetry]
name = "ai-safety-camp"
version = "0.1.0"
description = "AI safety research on goal specification for model agents"
authors = ["mickeybeurskens <mickeybeurskens@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
procgen = "^0.10.7"
ipykernel = "^6.29.0"
stable-baselines3 = "^2.2.1"
shimmy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
